--- a/Lesson-1.html
+++ b/Lesson-1.html
@@ -7,7 +7,7 @@
 	</head>
 	<body bgcolor="skyblue">
 		<p>
-			Shendi Language Stady Center!
+			Shendi Language Study Center!
 		</p>
 		<img src="https://gss2.bdstatic.com/9fo3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike116%2C5%2C5%2C116%2C38/sign=2fdc9fa51b38534398c28f73f27adb1b/00e93901213fb80e611a0d1e3dd12f2eb838942b.jpg">	>			<src="https://gss2.bdstatic.com/9fo3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike116%2C5%2C5%2C116%2C38/sign=2fdc9fa51b38534398c28f73f27adb1b/00e93901213fb80e611a0d1e3dd12f2eb838942b.jpg">	
 		</img>
